--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </div>
             <div class="dropdown">
                 <div class="from">
-                    <p>from</p>
+                    <p>From</p>
                     <div class="select-container">
                         <img src="https://flagsapi.com/US/flat/64.png" alt="">
                         <select name="from">
@@ -31,7 +31,7 @@
                 </div>
                 <i class="fa-solid fa-right-left"></i>
                 <div class="to">
-                    <p>to</p>
+                    <p>To</p>
                                   <div class="select-container">
                         <img src="https://flagsapi.com/US/flat/64.png" alt="">
                         <select name="from">
