app logic and app completed

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <form action="">
             <div class="amount">
                 <p>Enter Amount</p>
-                <input type="text" name="" id="" value="100" >
+                <input type="text" name="" id="" value="1" >
             </div>
             <div class="dropdown">
                 <div class="from">
@@ -21,10 +21,7 @@
                     <div class="select-container">
                         <img src="https://flagsapi.com/US/flat/64.png" alt="">
                         <select name="from">
-                            <option value="USD">USD</option>
-                            <option value="PKR">PKR</option>
-                            <option value="EUR">EUR</option>
-                            <option value="AUD">AUD</option>
+                       
                         </select>
 
                     </div>
@@ -32,23 +29,21 @@
                 <i class="fa-solid fa-right-left"></i>
                 <div class="to">
                     <p>To</p>
-                                  <div class="select-container">
-                        <img src="https://flagsapi.com/US/flat/64.png" alt="">
-                        <select name="from">
-                            <option value="USD">USD</option>
-                            <option value="PKR">PKR</option>
-                            <option value="EUR">EUR</option>
-                            <option value="AUD">AUD</option>
+                         <div class="select-container">
+                        <img src="https://flagsapi.com/PK/flat/64.png" alt="">
+                        <select name="to">
+
                         </select>
 
                     </div>
                 </div>
             </div>
-            <div class="msg">1usd=280pkr</div>
+            <div class="msg">1 USD = 284.20888129 PKR </div>
             <button>Get Exchange rate</button>
         </form>
     </div>
 </body>
-<script src="app.js"></script>
 <script src="codes.js"></script>
+<script src="app.js"></script>
+
 </html>
